dev/tests/cases/pos/03_vars.tv
df main() -> void {
    set count: i64 = 0;
    fixed name: str = "Sigrid";
    count = count + 1;
    count += 1;
    count -= 1;
    count *= 10;
    count /= 2;
    count %= 4;
    echo!(count);
    echo!(name);
}
