dev/tests/cases/neg/49_fn_returns_bridge.tv
df make() -> bridge<i64> {
    set c: bridge<i64> = bridge_new(1);
    return c;
}

df main() -> void {
    echo!("no");
}
